<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.contactForm">

    <TextView
        android:id="@+id/text_FormularioDeContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tw_contactForm"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="375dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:text="@string/tw_info"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_FormularioDeContacto" />

    <ScrollView
        android:layout_width="388dp"
        android:layout_height="469dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tw_firstname"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/tw2_firstname"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/text_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:text="@string/tw_lastname"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tw2_lastname"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tw_phone"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tw2_phone"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/spinnerPhone"
                android:layout_width="209dp"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tw_email"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tw2_email"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/spinnerEmail"
                android:layout_width="209dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/text_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tw2_adress"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tw2_adress"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tw_date"
                android:textSize="24sp"
                tools:text="@string/tw_date" />

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tw2_date"
                android:inputType="date" />

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:onClick="saveForm"
                android:text="@string/tw_Button" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>